--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,19 +5,17 @@
         <title>Accounts</title>
     </head>
     <body>
-
-        <h2>Accounts</h2>
-
-        <ol>
-            <li th:each="account : ${accounts}">
-                <span th:text="${account.username}">msg</span>
-            </li>
-        </ol>
-
         <form method="POST" th:action="@{/signup}">
+            <h2>Username</h2>
             <input type="text" name="username"/>
+            <h2>Password</h2>
             <input type="password" name="password"/>
-            <input type="submit" value="Add new account!"/>
+            <h2>Name</h2>
+            <input type="text" name="name"/>
+            <h2>profile path</h2>
+            <input type="text" name="path"/>
+            <br/>
+            <input type="submit" value="Create an account"/>
         </form>
     </body>
 </html>
