--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,6 +11,13 @@
     width: 30%;
 }
 
+.signin {
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
 .signup > h2 {
 }
 
