--- a/src/main/resources/templates/customlogin.html
+++ b/src/main/resources/templates/customlogin.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
     <title>Please sign in</title>
   </head>
   <body>
-     <div class="container">
-      <form class="form-signin" method="post" action="/login">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <p>
-          <label for="username" class="sr-only">Username</label>
-          <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
-        </p>
-        <p>
-          <label for="password" class="sr-only">Password</label>
-          <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-        </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <div th:replace="fragments/header :: header"></div>
+      <form class="signin" method="post" action="/login">
+            <h2>Please sign in</h2>
+            <h2>Username</h2>
+            <input type="text" name="username" placeholder="Username" required="" autofocus=""/>
+            <h2>Password</h2>
+            <input type="password" name="password" placeholder="Password" required=""/>
+            <input type="submit" value="Log in"/>
       </form>
-</div>
 </body></html>
