--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,7 @@ and open the template in the editor.
                 <a href="/login">Login</a>
             </span>
             <span sec:authorize="isAuthenticated()">
-                <a href="/friends">Friend list</a>
+                <a href="/friends">Friends</a>
                 <a th:href="@{/profile/{currentUserPath}(currentUserPath=${currentUserPath})}">Profile</a>
                 <a href="/logout">Logout</a>
             </span>
