Add new method searchFriend to class FriendsController.java that searches a user from given username Add search results to friends.html

--- a/src/main/resources/templates/Friends.html
+++ b/src/main/resources/templates/Friends.html
@@ -19,5 +19,6 @@ and open the template in the editor.
             <input type="text" name="username"/>
             <input type="submit" value="search"/>
         </form>
+        <div th:text="${searchresult}">searchresult</div>
     </body>
 </html>
