Change add friend form in friends.html to have link to /profile/add/{name}

--- a/src/main/resources/templates/Friends.html
+++ b/src/main/resources/templates/Friends.html
@@ -28,7 +28,8 @@ and open the template in the editor.
                 </a>
             </div>
             <div>
-                <form method="POST" th:action="@{/friends/add}">
+                <form method="POST" th:action="@{/friends/add/{searchresult.name}
+                   (searchresult.name=${searchresult.name})}">
                     <input type="submit" value="add"/>
                 </form>
             </div>
