--- a/src/main/resources/templates/Friends.html
+++ b/src/main/resources/templates/Friends.html
@@ -14,6 +14,16 @@ and open the template in the editor.
     <body>
                 
         <div th:replace="fragments/header :: header"></div>
+        <div th:if="${friendRequests != null}">
+        <h1>Result</h1>
+        <ul>
+            <li th:each="friendrequest : ${friendRequests}">
+                <a th:href="@{/../profile/{name}(name=${friendrequest.sender.path})}">
+                    <span th:text="${friendrequest.sender.name}"></span>
+                </a>
+            </li>
+        </ul>
+        </div>
         <form method="POST" th:action="@{/friends}">
             <h2>Username</h2>
             <input type="text" name="name"/>
