--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -24,5 +24,12 @@
 .signup > input {
 }
 
+.friends {
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
 #createaccount {
 }
