--- a/src/main/resources/templates/Friends.html
+++ b/src/main/resources/templates/Friends.html
@@ -7,11 +7,12 @@ and open the template in the editor.
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
+        <link rel="stylesheet" th:href="@{/css/style.css}" />
         <title>Friends</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
-    <body>
+    <body class="friends">
                 
         <div th:replace="fragments/header :: header"></div>
         <div th:if="${friendRequests != null}">
