Add functionality to methods searchFriend(), validateSearch() that they give boolean to model that tells if serachresult is a friend already. Change friends.css so that if searchresult is already a friend there is a disabled Add button.

--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -45,7 +45,12 @@ and open the template in the editor.
             <div>
                 <form method="POST" th:action="@{/friends/add/{searchresult.name}
                    (searchresult.name=${searchresult.name})}">
+                    <div th:if="${notAFriend}">
                     <input type="submit" value="add"/>
+                    </div>
+                    <div th:if="${!notAFriend}">
+                        <input type="submit" value="add" disabled=""/>
+                    </div>
                 </form>
             </div>
         </div>
