added autofocus to signup username field

--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -49,7 +49,7 @@ and open the template in the editor.
                     <input type="submit" value="add"/>
                     </div>
                     <div th:if="${!notAFriend}">
-                        <input type="submit" value="add" disabled=""/>
+                        <input type="submit" value="already a friend" disabled=""/>
                     </div>
                 </form>
             </div>
