--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,7 +10,7 @@
         <div th:replace="fragments/header :: header"></div>
         <form class="signup" method="POST" th:action="@{/signup}">
             <h2>Username</h2>
-            <input type="text" name="username"/>
+            <input type="text" name="username" autofocus=""/>
             <h2>Password</h2>
             <input type="password" name="password"/>
             <h2>Name</h2>
