Modify file profile.css so that only profile owner can see the add profile picture form

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -24,11 +24,13 @@ and open the template in the editor.
         <div th:if="${profilepicture != null}" class="profilepicture">
             <img th:src="*{'data:image/png;base64,'+profilepicture}" alt="" />
         </div>
-        <div th:if="${person != null}">
-            <form method="POST" th:action="@{/profile/{path}(path=${person.path})}" enctype="multipart/form-data">
-                <input type="file" name="file" id="file"/>
-                <input type="submit" value="Change profile picture"/>
-            </form>
+        <div th:if="${person != null and currentUser != null}">
+            <div th:if="${person.name} == ${currentUser.name}">
+                <form method="POST" th:action="@{/profile/{path}(path=${person.path})}" enctype="multipart/form-data">
+                    <input type="file" name="file" id="file"/>
+                    <input type="submit" value="Change profile picture"/>
+                </form>
+            </div>
         </div>
     </body>
 </html>
