--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -10,7 +10,7 @@
         <div th:replace="fragments/header :: header"></div>
         <div>
             <form method="POST" th:action="@{/frontpage}">
-                <input type="text" name="post"/>
+                <textarea class="" name="post"></textarea>
                 <input type="submit" value="Add post"/>
             </form>
         </div>
