--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -30,6 +30,11 @@ and open the template in the editor.
                     <input type="file" name="file" id="file"/>
                     <input type="submit" value="Change profile picture"/>
                 </form>
+                <form method="POST" th:action="@{/profile/addskill/{path}(path=${person.path})}">
+                    <h2>Add skill</h2>
+                    <input type="text" name="name"/>
+                    <input type="submit" value="Add skill"/>
+                </form>
             </div>
         </div>
     </body>
