Add default timezone eet

--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -17,6 +17,7 @@
         
         <div th:each="post : ${posts}">
             <h3 th:text="${post.user.name}">user</h3>
+            <h3 th:text="${post.time}">user</h3>
             <p th:text="${post.post}">post</p>
         </div>
     </body>
