You can now add a skill and your skills display on your profile

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -32,10 +32,14 @@ and open the template in the editor.
                 </form>
                 <form method="POST" th:action="@{/profile/addskill/{path}(path=${person.path})}">
                     <h2>Add skill</h2>
-                    <input type="text" name="name"/>
+                    <input type="text" name="skill"/>
                     <input type="submit" value="Add skill"/>
                 </form>
             </div>
+        </div>
+        
+        <div th:each="skill : ${skills}">
+            <p th:text="${skill.skill}">skill</p>
         </div>
     </body>
 </html>
