profile.html now shows top 3 skills and "other skills"

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -38,7 +38,16 @@ and open the template in the editor.
             </div>
         </div>
         
-        <div th:each="skill : ${skills}">
+        <h2>Top 3 skills:</h2>
+        <div th:each="skill : ${top3skills}">
+            <p th:text="${skill.skill}">skill</p>
+            <form method="POST" th:action="@{/profile/{path}/like/{id} (id=${skill.id}, path=${person.path})}">
+                <input type="submit" value="Like"/>
+            </form>
+            <p th:text="${#lists.size(skill.likes)}">amount of likes</p>
+        </div>
+        <h2>Other skills:</h2>
+        <div th:each="skill : ${otherskills}">
             <p th:text="${skill.skill}">skill</p>
             <form method="POST" th:action="@{/profile/{path}/like/{id} (id=${skill.id}, path=${person.path})}">
                 <input type="submit" value="Like"/>
