--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -23,6 +23,10 @@
                 <input type="submit" value="Like"/>
             </form>
             <p th:text="${#lists.size(post.likes)}">amount of likes</p>
+            <form method="POST" th:action="@{/frontpage/comment/{postid}(postid=${post.id})}">
+                <textarea class="" name="post"></textarea>
+                <input type="submit" value="Add comment"/>
+            </form>
         </div>
     </body>
 </html>
