--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -16,8 +16,8 @@
         </div>
         
         <div th:each="post : ${posts}">
-            <h3 th:text="${post.user.name}">user</h3>
-            <h3 th:text="${post.time}">user</h3>
+            <span th:text="${post.user.name}">user</span>
+            <span th:text="${#temporals.format(post.time, 'dd-MM-yyyy HH:mm')}">user</span>
             <p th:text="${post.post}">post</p>
             <p><span th:text="${#lists.size(post.likes)}">amount of likes</span> likes</p>
             <form method="POST" th:action="@{/frontpage/like/{id}(id=${post.id})}">
