--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -17,14 +17,15 @@
         
         <div th:each="post : ${posts}">
             <span th:text="${post.user.name}">user</span>
-            <span th:text="${#temporals.format(post.time, 'dd-MM-yyyy HH:mm')}">user</span>
+            <span th:text="${#temporals.format(post.time, 'dd-MM-yyyy HH:mm')}">time</span>
             <p th:text="${post.post}">post</p>
             <p><span th:text="${#lists.size(post.likes)}">amount of likes</span> likes</p>
             <form method="POST" th:action="@{/frontpage/like/{id}(id=${post.id})}">
                 <input type="submit" value="Like"/>
             </form>
-            <div th:each="comment : ${post.comments}">
+            <div th:each="comment,pStat : ${post.comments}" th:unless="${pStat.index > 9}">
                 <h4 th:text="${comment.username}">user</h4>
+                <h6 th:text="${#temporals.format(comment.time, 'dd-MM-yyyy HH:mm')}">comment time</h6>
                 <p th:text="${comment.commentText}">comment</p>
             </div>
             <form method="POST" th:action="@{/frontpage/comment/{postid}(postid=${post.id})}">
